# salamandra-7b-resident-evil-sft

./: README.md  fine_tuning.py  fine_tunning.py  inference.py  merge_models.py  pyproject.toml
