[project]
name = "model-training"
version = "0.1.0"
description = "Fine-tuning Salamandra 7B using QLoRA with extreme optimization for 12GB VRAM."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "peft>=0.9.0",
    "trl>=0.7.11",
    "datasets>=2.18.0",
    "bitsandbytes>=0.42.0",
    "accelerate>=0.27.2"
]